// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField matches snapshot: enzyme.mount 1`] = `
<InputField
  hint={null}
  input={Object {}}
  meta={Object {}}
>
  <glamorous(label)>
    <label
      className="css-1b081ox"
    >
      <glamorous(span)>
        <span
          className="css-yengmq"
        >
          example
        </span>
      </glamorous(span)>
      <Input
        onChange={null}
        type="text"
      >
        <glamorous(input)
          onChange={null}
          type="text"
        >
          <input
            className="css-opcxs3"
            onChange={null}
            type="text"
          />
        </glamorous(input)>
      </Input>
    </label>
  </glamorous(label)>
</InputField>
`;

exports[`InputField matches snapshot: enzyme.render 1`] = `
<label
  class="css-1b081ox"
>
  <span
    class="css-yengmq"
  >
    example
  </span>
  <input
    class="css-opcxs3"
    type="text"
  />
</label>
`;

exports[`InputField matches snapshot: enzyme.shallow 1`] = `
<glamorous(label)>
  <glamorous(span)>
    example
  </glamorous(span)>
  <Input
    onChange={null}
    type="text"
  />
</glamorous(label)>
`;
